--- a/src/i18n/translations/en.json
+++ b/src/i18n/translations/en.json
@@ -66,41 +66,68 @@
         "name": "Margarita",
         "description": "Tequila, lime juice, triple sec, salt rim"
       },
-      "espresso": {
-        "name": "Espresso"
+      "kafe": {
+        "name": "Coffee"
       },
-      "cappuccino": {
-        "name": "Cappuccino"
+      "uje": {
+        "name": "Water"
       },
-      "macchiato": {
+      "makiato": {
         "name": "Macchiato"
       },
-      "americano": {
-        "name": "Americano"
+      "cajINgrohte": {
+        "name": "Hot Tea"
+      },
+      "kakao": {
+        "name": "Hot Chocolate"
+      },
+      "kapucino": {
+        "name": "Cappuccino"
       },
       "latte": {
         "name": "Latte"
       },
-      "hotChocolate": {
-        "name": "Hot Chocolate"
+      "fredo": {
+        "name": "Freddo"
       },
-      "tea": {
-        "name": "Tea"
+      "makiatoEMadhe": {
+        "name": "Large Macchiato"
       },
-      "birraKorca": {
-        "name": "Birra Korça"
+      "kafeEMadhe": {
+        "name": "Large Coffee"
       },
-      "birraTirana": {
-        "name": "Birra Tirana"
+      "frape": {
+        "name": "Frappé"
+      },
+      "kapucinoEFtohte": {
+        "name": "Iced Cappuccino"
+      },
+      "kakaoEFtohte": {
+        "name": "Iced Chocolate"
       },
       "heineken": {
         "name": "Heineken"
       },
-      "corona": {
+      "korona": {
         "name": "Corona"
       },
-      "stellaArtois": {
-        "name": "Stella Artois"
+      "peroni": {
+        "name": "Peroni"
+      },
+      "schoffer": {
+        "name": "Schöfferhofer"
+      },
+      "peja": {
+        "name": "Peja"
+      },
+      "korca": {
+        "name": "Korça"
+      },
+      "paulaner": {
+        "name": "Paulaner"
+      },
+      "bavaria": {
+        "name": "Bavaria"
       },
       "cocaCola": {
         "name": "Coca Cola"
@@ -108,38 +135,86 @@
       "fanta": {
         "name": "Fanta"
       },
-      "sprite": {
-        "name": "Sprite"
+      "lemonSoda": {
+        "name": "Lemon Soda"
       },
-      "water": {
-        "name": "Water"
+      "orangeSoda": {
+        "name": "Orange Soda"
       },
-      "freshOrangeJuice": {
-        "name": "Fresh Orange Juice"
+      "lipton": {
+        "name": "Lipton Ice Tea"
       },
-      "lemonade": {
-        "name": "Lemonade"
+      "akullore": {
+        "name": "Ice"
       },
-      "raki": {
-        "name": "Raki"
+      "schweppes": {
+        "name": "Schweppes"
       },
-      "vodka": {
-        "name": "Vodka"
+      "bravo": {
+        "name": "Bravo"
       },
-      "whiskey": {
-        "name": "Whiskey"
+      "neskafe": {
+        "name": "Nescafé"
+      },
+      "redBull": {
+        "name": "Red Bull"
+      },
+      "b52": {
+        "name": "B52"
+      },
+      "grodino": {
+        "name": "Grodino"
+      },
+      "rosseLimonade": {
+        "name": "Rosse Lemonade"
+      },
+      "ujeVitamine": {
+        "name": "Vitamin Water"
+      },
+      "ivi": {
+        "name": "Ivi"
       },
       "gin": {
         "name": "Gin"
       },
-      "rum": {
-        "name": "Rum"
+      "bombay": {
+        "name": "Bombay"
       },
-      "tequila": {
+      "hendricks": {
+        "name": "Hendrick's"
+      },
+      "martini": {
+        "name": "Martini"
+      },
+      "jagermeister": {
+        "name": "Jägermeister"
+      },
+      "konjakSkenderbeu": {
+        "name": "Skënderbeu Cognac"
+      },
+      "raki": {
+        "name": "Raki"
+      },
+      "tekila": {
         "name": "Tequila"
       },
-      "brandy": {
-        "name": "Brandy"
+      "bacardi": {
+        "name": "Bacardi"
+      },
+      "jackDaniels": {
+        "name": "Jack Daniel's"
+      },
+      "chivas": {
+        "name": "Chivas"
+      },
+      "vodka": {
+        "name": "Vodka"
+      },
+      "amaro": {
+        "name": "Amaro"
+      },
+      "amaroDelKapo": {
+        "name": "Amaro del Capo"
       }
     }
   },
