--- a/src/i18n/translations/pl.json
+++ b/src/i18n/translations/pl.json
@@ -60,7 +60,7 @@
       },
       "sexOnTheBeach": {
         "name": "Sex On The Beach",
-        "description": "Wódka, brzoskwiniowy schnapps, sok żurawinowy, sok ananasowy"
+        "description": "Wódka, likier brzoskwiniowy, sok żurawinowy, sok ananasowy"
       },
       "margarita": {
         "name": "Margarita",
