--- a/src/i18n/translations/de.json
+++ b/src/i18n/translations/de.json
@@ -21,11 +21,9 @@
   },
   "gallery": {
     "image1": "Außenansicht der Beach Bar Joni",
-    "image2": "Cocktails und Getränke",
-    "image3": "Strandblick von der Bar",
-    "image4": "Bar-Innenbereich",
-    "image5": "Sonnenuntergang am Strand",
-    "image6": "Bar-Atmosphäre"
+    "image2": "Beach Bar Joni - Außensitzplätze",
+    "image3": "Beach Bar Joni - Bar-Innenbereich",
+    "image4": "Beach Bar Joni - Cocktails und Getränke"
   },
   "location": {
     "title": "Besuchen Sie Uns",
