--- a/src/i18n/translations/it.json
+++ b/src/i18n/translations/it.json
@@ -21,11 +21,9 @@
   },
   "gallery": {
     "image1": "Vista esterna del Beach Bar Joni",
-    "image2": "Cocktail e bevande",
-    "image3": "Vista della spiaggia dal bar",
-    "image4": "Interno del bar",
-    "image5": "Tramonto sulla spiaggia",
-    "image6": "Atmosfera del bar"
+    "image2": "Beach Bar Joni - Posti a sedere all'aperto",
+    "image3": "Beach Bar Joni - Interno del bar",
+    "image4": "Beach Bar Joni - Cocktail e bevande"
   },
   "location": {
     "title": "Visitaci",
