--- a/src/i18n/translations/pl.json
+++ b/src/i18n/translations/pl.json
@@ -21,11 +21,9 @@
   },
   "gallery": {
     "image1": "Widok zewnętrzny Beach Bar Joni",
-    "image2": "Koktajle i napoje",
-    "image3": "Widok na plażę z baru",
-    "image4": "Wnętrze baru",
-    "image5": "Zachód słońca na plaży",
-    "image6": "Atmosfera baru"
+    "image2": "Beach Bar Joni - Miejsca siedzące na zewnątrz",
+    "image3": "Beach Bar Joni - Wnętrze baru",
+    "image4": "Beach Bar Joni - Koktajle i napoje"
   },
   "location": {
     "title": "Odwiedź Nas",
