--- a/src/i18n/translations/sq.json
+++ b/src/i18n/translations/sq.json
@@ -21,11 +21,9 @@
   },
   "gallery": {
     "image1": "Pamja e jashtme e Beach Bar Joni",
-    "image2": "Kokteje dhe pije",
-    "image3": "Pamja e plazhit nga bari",
-    "image4": "Brendësia e barit",
-    "image5": "Perëndimi i diellit në plazh",
-    "image6": "Atmosfera e barit"
+    "image2": "Beach Bar Joni - Ulëse të jashtme",
+    "image3": "Beach Bar Joni - Brendësia e barit",
+    "image4": "Beach Bar Joni - Kokteje dhe pije"
   },
   "location": {
     "title": "Na Vizitoni",
