--- a/src/i18n/translations/en.json
+++ b/src/i18n/translations/en.json
@@ -21,11 +21,9 @@
   },
   "gallery": {
     "image1": "Beach Bar Joni exterior view",
-    "image2": "Cocktails and drinks",
-    "image3": "Beach view from bar",
-    "image4": "Bar interior",
-    "image5": "Sunset at the beach",
-    "image6": "Bar atmosphere"
+    "image2": "Beach Bar Joni - Outdoor Seating",
+    "image3": "Beach Bar Joni - Bar Interior",
+    "image4": "Beach Bar Joni - Cocktails and Drinks"
   },
   "location": {
     "title": "Visit Us",
