--- a/src/i18n/translations/sq.json
+++ b/src/i18n/translations/sq.json
@@ -2,13 +2,13 @@
   "meta": {
     "title": "Beach Bar Joni - Golem, Shqipëri",
     "description": "Beach Bar Joni në Golem. Shijoni kokteje të shijshme, birra të ftohta dhe pamje të mrekullueshme të plazhit. Vizitoni për një përvojë të paharrueshme pranë detit.",
-    "menuTitle": "Menyja - Beach Bar Joni",
+    "menuTitle": "Menuja - Beach Bar Joni",
     "menuDescription": "Zbuloni menynë tonë të pasur në Beach Bar Joni - kokteje, birra, pije të ngrohta dhe freskuese."
   },
   "navigation": {
     "brand": "Beach Bar Joni",
     "home": "Kreu",
-    "menu": "Menyja",
+    "menu": "Menuja",
     "gallery": "Galeria",
     "location": "Vendndodhja",
     "contact": "Kontakti"
