--- a/src/i18n/translations/sq.json
+++ b/src/i18n/translations/sq.json
@@ -36,7 +36,7 @@
   },
   "contact": {
     "followInstagram": "Na ndiqni në Instagram",
-    "getDirections": "Merrni Udhëzimet"
+    "getDirections": "Vendndodhja"
   },
   "footer": {
     "description": "Shijoni kombinimin e përsosur të pijeve freskuese dhe pamjeve të mrekullueshme të plazhit.",
