Add beach umbrellas section with pricing and rules
- Add new beach rules pages with full i18n support (6 languages)
- Add umbrella icon to navigation between home and menu
- Add beach rules button to hero section (blue color)
- Create umbrella pricing data structure (10€/1000L full day 7am-6pm)
- Implement 5 beach rules: no outside food/drinks, no animals, use bins, supervise children, respect others
- Add proper routing for /beach-rules with language variants
- Update all translation files with beach rules content
- Fix Sentry optimization issues in astro.config.mjs
- Use static imports for pricing data to resolve loading issues
- All pages build successfully and work correctly

--- a/src/i18n/translations/de.json
+++ b/src/i18n/translations/de.json
@@ -9,6 +9,7 @@
     "brand": "Beach Bar Joni",
     "home": "Startseite",
     "menu": "Speisekarte",
+    "beachRules": "Strandregeln",
     "gallery": "Galerie",
     "location": "Standort",
     "contact": "Kontakt"
@@ -17,6 +18,7 @@
     "title": "Beach Bar Joni",
     "subtitle": "Erleben Sie die perfekte Mischung aus erfrischenden Getränken und atemberaubenden Strandblicken",
     "viewMenu": "Speisekarte Ansehen",
+    "beachRules": "Strandregeln",
     "findUs": "Finden Sie Uns"
   },
   "gallery": {
@@ -229,5 +231,25 @@
   "language": {
     "current": "Deutsch",
     "switch": "Sprache"
+  },
+  "beachRules": {
+    "title": "Sonnenschirme & Strandregeln",
+    "subtitle": "Genießen Sie unseren Strand mit Komfort und respektieren Sie unsere Richtlinien",
+    "pricing": {
+      "title": "Sonnenschirm-Mietpreise",
+      "fullDay": "Ganzer Tag (7:00 - 18:00)"
+    },
+    "rules": {
+      "title": "Strand-Regeln und Richtlinien",
+      "rule1": "Keine mitgebrachten Speisen oder Getränke erlaubt - bitte genießen Sie unser Barangebot",
+      "rule2": "Tiere sind im Strandbereich nicht erlaubt",
+      "rule3": "Bitte entsorgen Sie allen Müll in den bereitgestellten Behältern - kein Littering",
+      "rule4": "Kinder müssen jederzeit beaufsichtigt werden",
+      "rule5": "Bitte respektieren Sie andere Strandbesucher und halten Sie angemessene Lautstärke ein"
+    },
+    "contact": {
+      "title": "Fragen?",
+      "text": "Kontaktieren Sie unser Personal für Sonnenschirm-Vermietung und Fragen zu den Strandregeln."
+    }
   }
 }
