--- a/src/i18n/translations/sq.json
+++ b/src/i18n/translations/sq.json
@@ -249,7 +249,7 @@
     },
     "contact": {
       "title": "Pyetje?",
-      "text": "Kontaktoni stafin tonë për qira çadrash dhe çdo pyetje rreth rregullave të plazhit."
+      "text": "Kontaktoni stafin tonë për çadra dhe çdo pyetje rreth rregullave të plazhit."
     }
   }
 }
